classDiagram
    
    %% Ajouter l'extension Mermaid Chart 
    %% Crtl+Shift+P -> "Mermaid Chart Preview Diagram"

    class CellState {
        <<abstract>>
        #alive: bool
        +CellState(bool)
        +isAlive() bool
        +~CellState()
    }
    
    class AliveState {
        +AliveState()
    }
    
    class DeadState {
        +DeadState()
    }


    class Cell {
        -state: CellState*
        -nextState: CellState*
        +Cell()
        +~Cell()
        +isAlive() bool
        +setState(CellState*) void
        +prepareNext(CellState*) void
        +update() void
    }
    

    class Grid {
        -cells: vector~vector~Cell~~
        -rows: int
        -cols: int
        +Grid(int rows, int cols)
        +loadFromFile(string filename) void
        +getCell(int row, int col) Cell&
        +countNeighbors(int row, int col) int
        +getRows() int
        +getCols() int
    }
    

    class Rule {
        +conwayRule(bool currentState, int neighbors) bool
    }
    

    class Game {
        -grid: Grid
        -rule: Rule*
        -iteration: int
        +Game(string filename, Rule* rule)
        +~Game()
        +step() void
        +runConsole(int steps) void
        +display() void
        +getGrid() Grid&
        +getIteration() int
    }
    
    
    CellState <|-- AliveState
    CellState <|-- DeadState
    Cell --> CellState
    Grid *-- Cell
    Game *-- Grid 
    Game --> Rule